--- a/src/buttons.scss
+++ b/src/buttons.scss
@@ -1,30 +1,6 @@
 $blue: #167ac6;
 $shadow: 0 3px 12px rgba(0, 0, 0, .23), 0 3px 12px rgba(0, 0, 0, .16);
 
-body,
-html{
-	margin: 0;
-	padding: 0;
-	font-family: lato;
-}
-h2{
-	padding: 0 10px;
-}
-section{
-	width: 100%;
-	padding: 0 10px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-}
-	.column{
-		flex: 1;
-	}
-		.title{
-			padding: 10px 0;
-			font-size: 12px;
-		}
-
 .button{
 	padding: 10px;
 	position: relative;
@@ -54,7 +30,7 @@ section{
 	// 	border-color: $blue;
 	// }
 	&:after{
-		content: " ";
+		content: ' ';
 		top: -4px;
 		bottom: -4px;
 		left: -4px;
