--- a/tests/style.css
+++ b/tests/style.css
@@ -1,31 +1,3 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-  font-family: lato;
-}
-
-h2 {
-  padding: 0 10px;
-}
-
-section {
-  width: 100%;
-  padding: 0 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.column {
-  flex: 1;
-}
-
-.title {
-  padding: 10px 0;
-  font-size: 12px;
-}
-
 .button {
   padding: 10px;
   position: relative;
@@ -41,7 +13,7 @@ section {
 }
 
 .button:after {
-  content: " ";
+  content: ' ';
   top: -4px;
   bottom: -4px;
   left: -4px;
@@ -115,4 +87,32 @@ section {
   background: #136caf;
   color: #fff;
   border-color: transparent;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: lato;
+}
+
+h2 {
+  padding: 0 10px;
+}
+
+section {
+  width: 100%;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.column {
+  flex: 1;
+}
+
+.title {
+  padding: 10px 0;
+  font-size: 12px;
 }
