added prefix to classes

--- a/tests/index.jade
+++ b/tests/index.jade
@@ -7,17 +7,17 @@ link(rel="stylesheet", href="./style.css")
 	section
 		each className in classes
 			.column
-				div.title .button.#{className}
-				button(class=className).button Click me!
+				div.title .cnvs-button.#{className}
+				button(class=className).cnvs-button Click me!
 	h2 button--primary
 	section
 		each className in classes
 			.column
-				div.title .button.button--primary.#{className}
-				button(class=className).button.button--primary Click me!
+				div.title .cnvs-button.cnvs-button--primary.#{className}
+				button(class=className).cnvs-button.cnvs-button--primary Click me!
 	h2 button--circular
 	section
 		each className in classes
 			.column
-				div.title .button.button--circular.#{className}
-				button(class=className).button.button--circular +
+				div.title .cnvs-button.cnvs-button--circular.#{className}
+				button(class=className).cnvs-button.cnvs-button--circular +
