--- a/src/buttons.scss
+++ b/src/buttons.scss
@@ -1,7 +1,7 @@
 $blue: #167ac6;
 $shadow: 0 3px 12px rgba(0, 0, 0, .23), 0 3px 12px rgba(0, 0, 0, .16);
 
-.button{
+.cnvs-button{
 	padding: 10px;
 	position: relative;
 	background: transparent;
@@ -55,7 +55,7 @@ $shadow: 0 3px 12px rgba(0, 0, 0, .23), 0 3px 12px rgba(0, 0, 0, .16);
 		// outline: 1px solid rgba($blue, .2);
 	}
 }
-.button--primary{
+.cnvs-button--primary{
 	background: $blue;
 	color: #fff;
 	box-shadow: $shadow;
@@ -70,7 +70,7 @@ $shadow: 0 3px 12px rgba(0, 0, 0, .23), 0 3px 12px rgba(0, 0, 0, .16);
 		border-color: transparent;
 	}
 }
-.button--circular{
+.cnvs-button--circular{
 	width: 50px;
 	height: 50px;
 	background: $blue;
